# hybrid-agent-framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
docs/: architecture.md  best-practices.md  getting-started.md
examples/: README.md  code_review_deploy.py  devops_incident_response.py  financial_audit.py  research_pipeline.py
hybrid_agents/: __init__.py  agents.py  guardrails.py  platform.py  task.py
scripts/: setup_repo.sh
tests/: test_platform.py
